# rust-benchmark-regex

./: Cargo.toml  README.md
benches/: regex.rs
