[package]
name = "regex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "=1.9.1"

[dev-dependencies]
criterion = "0"

[[bench]]
name = "regex"
harness = false

[profile.release]
debug = false
opt-level = 3
codegen-units = 1
lto = true
